first commit azd 17

--- a/LAHJA/Pages/Services/Index.razor
+++ b/LAHJA/Pages/Services/Index.razor
@@ -9,27 +9,7 @@
 @using Microsoft.AspNetCore.Authorization
 
 
-@attribute [Authorize]
-
-<style>
-    .custom-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 10px;
-/*         margin: 20px auto;
- */    
-}
-
-    .section-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    
-</style>
+@* @attribute [AllowAnonymous] *@
 
 
 <TemplateServices />
