--- a/LAHJA/UI/Templates/Studio/TemplateStudio.razor
+++ b/LAHJA/UI/Templates/Studio/TemplateStudio.razor
@@ -1,8 +1,12 @@
-﻿@using LAHJA.UI.Components.StudioLahjaAi
+﻿
+@using LAHJA.UI.Components.StudioLahjaAi
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize]
 
-<MainStudio />
+    @* <MainStudio /> *@
 
+@code{
 
+    // // [Parameter] public string Url { get; set; } = "start";
+}
