--- a/LAHJA/Pages/Studio/Index.razor
+++ b/LAHJA/Pages/Studio/Index.razor
@@ -1,12 +1,15 @@
-﻿@page "/studio"
+﻿@* @page "/studio" *@
+@* @page "/studio/{*Url}" *@
 
 @using LAHJA.UI.Templates.Studio
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize]
 
-<TemplateStudio  />
+@* <TemplateStudio /> *@
 
 @code {
-   
+
+    // [Parameter] public string Url { get; set; } = "start";
 }
+
