--- a/LAHJA/UI/Components/IframeComponent.razor
+++ b/LAHJA/UI/Components/IframeComponent.razor
@@ -5,19 +5,52 @@
 @inject ISnackbar Snackbar
 @inject NavigationManager Navigation
 @inject TemplateAuthSession templateAuthSession
-
-
+@attribute [Authorize]
+@inject SessionUserManager sessionUserManager
 @if (!string.IsNullOrEmpty(srcIframe))
 {
     <iframe src="@srcIframe"
-            style="@styleCss"
-            onload="@OnFrameLoaded">
+    class="@CSSClass"
+    style="@styleCss"
+    onload="@OnFrameLoaded">
     </iframe>
 }
 
 @if (isLoading)
 {
-    <Loading IsLoading="@isLoading" />
+    @* <Loading IsLoading="@isLoading" /> *@
+
+    <MudCard Class="mx-auto" Style="width:98%;height:98%">
+        <MudCardHeader>
+            @*         <CardHeaderAvatar>
+                <MudSkeleton SkeletonType="SkeletonType.Circle" Animation="Animation.Wave" Height="40px" Width="40px" />
+            </CardHeaderAvatar> *@
+            <CardHeaderContent>
+                <MudSkeleton Animation="Animation.False" Width="100%" />
+                <MudSkeleton Animation="Animation.Wave" Width="100%" />
+                <MudSkeleton Animation="Animation.Pulse" Width="100%" />
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
+            <MudCardContent>
+                <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="250px" Width="100%" />
+            </MudCardContent>
+            <MudCardContent>
+                <MudSkeleton Animation="Animation.Wave" Width="100%" />
+                <MudSkeleton Animation="Animation.Pulse" Width="100%" />
+            </MudCardContent>
+             <MudCardActions>
+                <MudSkeleton SkeletonType="SkeletonType.Rectangle" Animation="Animation.Wave" Height="250px" Width="100%" />
+            </MudCardActions>
+        </MudCardContent>
+       
+        <MudCardActions>
+            <MudSkeleton Animation="Animation.Wave" Width="100%" />
+            <MudSkeleton Animation="Animation.Pulse" Width="100%" />
+            @*             <MudSkeleton SkeletonType="SkeletonType.Circle" Animation="Animation.Wave" Height="30px" Width="30px" Class="ml-2 mb-2" />
+            <MudSkeleton SkeletonType="SkeletonType.Circle" Animation="Animation.Wave" Height="30px" Width="30px" Class="ml-3 mb-2" /> *@
+        </MudCardActions>
+    </MudCard>
 }
 
 @code {
@@ -25,7 +58,12 @@
     private bool isLoading = true;
     private string srcIframe;
     private string serviceId;
-    private string backupServiceLink;
+    private string url_redirect;
+    private string url_cancel;
+    private string _theme;
+    private string data;
+    private string lg="lg";
+    private string backupPageUrl;
     private string styleCss = "width:100%;height:100%;border:none";
 
     [Parameter]
@@ -41,10 +79,52 @@
     }
 
     [Parameter]
-    public string SrcIframe
+    public string UrlRedirect
     {
-        get => srcIframe; set { srcIframe = value; }
+        get => url_redirect; set { url_redirect = value; }
     }
+
+    [Parameter]
+    public string Lg
+    {
+        get => lg; set { lg = value; }
+    }
+
+    [Parameter]
+    public string UrlCancel
+    {
+        get => url_cancel; set { url_cancel = value; }
+    }    
+
+    [Parameter]
+    public string Theme
+    {
+        get => _theme; set { _theme = value; }
+    }   
+
+    [Parameter]
+    public string Data
+    {
+        get => data; set { data = value; }
+    }
+
+    [Parameter]
+    public string SrcIFrame
+    {
+        get => srcIframe; 
+        set {
+
+            if (!string.IsNullOrEmpty(value))
+            {
+                srcIframe = HandelIFrameSrcAsync(value).Result;
+                StateHasChanged();
+            }
+        }
+    }
+
+    [Parameter]
+    public string CSSClass { get; set; } = "";
+
     [Parameter]
     public string ServiceId
     {
@@ -52,29 +132,49 @@
     }   
 
     [Parameter]
-    public string BackupServiceLink
+    public string BackupPageUrl
     {
-        get => backupServiceLink; set { backupServiceLink = value; }
-    }
+        get => backupPageUrl; set { backupPageUrl = value; }
+    }  
+
+    [Parameter]
+    public EventCallback OnLoadFrame{  get; set; }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-
-            await CreateSessionTokenAsync();
+            if (string.IsNullOrEmpty(srcIframe))
+                await CreateSessionTokenAsync();
         }
     }
-
-
-
-    private void OnFrameLoaded()
+    private async void  OnFrameLoaded()
     {
         isLoading = false;
+        StateHasChanged();
+        if (OnLoadFrame.HasDelegate)
+        {
+            await OnLoadFrame.InvokeAsync();
+        }
     }
+    private async Task<string> HandelIFrameSrcAsync(string url)
+    {
+        if (string.IsNullOrEmpty(_theme))
+        {
+            _theme = await sessionUserManager.GetThemeAsync();
+        }
+
+        return  Helper.GetServiceSrcFrame(url,
+              lg: lg,
+              theme: _theme,
+              url_redirect: url_redirect,
+              url_cancel: url_cancel,
+              data: data);
 
 
-    protected async Task CreateSessionTokenAsync()
+    }
+    private async Task CreateSessionTokenAsync()
     {
 
         if (!string.IsNullOrEmpty(serviceId))
@@ -109,27 +209,55 @@
         }
 
     }
-    public async Task CreateSessionAsync(string serviceId)
+    private async Task CreateSessionAsync(string serviceId)
     {
         if (templateAuthSession.BuilderComponents.GetSessionsAccessTokens != null)
         {
             var res = await templateAuthSession.BuilderComponents.SubmitCreateSessionToken(new DataBuildSessionTokenAuth { ServiceId = serviceId });
             if (res.Succeeded)
             {
-                srcIframe = Helper.GetServiceSrcFrame(res.Data.UrlCore, res.Data.SessionToken);
-                StateHasChanged();
-            }
-            else if (!string.IsNullOrEmpty(backupServiceLink))
-            {
-                srcIframe = backupServiceLink;
+
+                _theme = await HelperThemeManager.GetStringThemeAsync();
+
+                srcIframe =  Helper.GetServiceSrcFrame(
+                    urlCore: res.Data.UrlCore, 
+                    sessionToken: res.Data.SessionToken,
+                    lg: lg,
+                    theme: _theme,
+                    url_redirect:url_redirect,
+                    url_cancel:url_cancel,
+                    data:data);
+
                 StateHasChanged();
             }
             else
             {
-                Navigation.NavigateTo("/",true);
+                if (!string.IsNullOrEmpty(backupPageUrl))
+                {
+                    srcIframe = await HandelIFrameSrcAsync(backupPageUrl);
+                    StateHasChanged();
+                }
+                else
+                {
+                    Snackbar.Add((res.Messages.Any() && res.Messages[0].Contains("400") ? "Your subscription is canceled or expired" : res.Messages[0] ?? "Error"), Severity.Error);
+                    if (!string.IsNullOrEmpty(url_cancel))
+                        Navigation.NavigateTo(url_cancel);
+                }
+             
+      
             }
-
-            
+        // else if (!string.IsNullOrEmpty(backupPageUrl))
+        //     {
+        //         // Navigation.NavigateTo(backupPageUrl);
+        //         srcIframe = await HandelIFrameSrcAsync(backupPageUrl);
+    
+        //         // srcIframe = $"{backupPageUrl}?__theme={_theme}&lg={lg}"; ;
+        //         StateHasChanged();
+        //     }
+        //     else
+        //     {
+        //         Navigation.NavigateTo("/",true);
+        //     }
         }
     }
 }
