--- a/LAHJA/UI/Components/ProFile/Settings/Spaces.razor
+++ b/LAHJA/UI/Components/ProFile/Settings/Spaces.razor
@@ -11,6 +11,7 @@
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
 @inject IManageLanguageService _manageLanguageService
+@inject NavigationManager Navigation
 
 <TabelDashCard T="DataBuildSpace" DataAndEventBuildTabel="dataAndEvent" 
                                   StateCounts="cardStates"
@@ -64,8 +65,6 @@
 
             if (response.Succeeded)
             {
-                // srcIframe = $"{response.Data.UrlCore}/?token={response.Data.SessionToken}";
-
                 srcIframe= Helper.GetServiceSrcFrame(response.Data.UrlCore, response.Data.SessionToken);
                 OpenDialog(srcIframe);
                 
@@ -101,14 +100,14 @@
             new()
             {
                 Value="6",
-                Label="Active"
+                Label=TranslationsLST[lg]["Active"]
 
             },
 
              new()
             {
                  Value="1",
-                Label="UnActive"
+              Label=TranslationsLST[lg]["UnActive"]
             }
             ,
 
@@ -172,6 +171,10 @@
 
             { x =>x.DataBuild1,null },
             {x => x.DataBuildCheck,null},
+            {x => x.Language,lg},
+            {x => x.UrlRedirect,Helper.GetFullPath(Navigation,RouterPage.DASHBOARD_SPACES)},
+            {x => x.UrlCancel,Helper.GetFullPath(Navigation,RouterPage.DASHBOARD_SPACES)},
+            {x => x.Data,null},
             {x=>x.SrcIframe,srcIframe}
         };
 
@@ -185,14 +188,19 @@
                 ["Text1"] = "create your spaces",
                 ["Text2"] = "AI لهجة",
                 ["Description"] = "LAHJA platform provides a smart way to communicate with AI in your own dialect.",
-                ["ButtonLink"] = "Create Space"
+                ["ButtonLink"] = "Create Space",
+                ["Active"] = "Spaces Active",
+                ["UnActive"] = "Spaces UnActive"
+
             },
             ["ar"] = new()
             {
                 ["Text1"] = "انشى مساحاتك ",
                 ["Text2"] = "لهجة AI",
                 ["Description"] = "توفر  منصة لهجة  طريقة ذكية للتواصل مع الذكاء الاصطناعي بلهجتك الخاصة.",
-                ["ButtonLink"] = "انشاء مساحة "
+                ["ButtonLink"] = "انشاء مساحة ",
+                ["Active"] = "المساحات  النشطة",
+                ["UnActive"] = "المساحات غير النشطة",
             }
         };
 
