--- a/LAHJA/UI/Components/ProFile/Statistics.razor
+++ b/LAHJA/UI/Components/ProFile/Statistics.razor
@@ -2,44 +2,40 @@
 @using LAHJA.UI.Components.Statistics
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
-
-
-  @*   <iframe src="https://modelspeech.onrender.com/dashboard/"
-            width="100%"
-            height="700"
-            style="border: none;height:700px">
-    </iframe> *@
-
-<IframeComponent StyleCss="width:100%;height:700px !important;border:none" 
-IsLoading="true" 
-ServiceId="serv_5c095af3909547e888f2a0636a307ff9" 
-BackupServiceLink="https://modelspeech.onrender.com/dashboard/" />
-
-
-    @* <MainPieChart /> *@
-    @* < div class="mt-4" />
-    <LineChart />
-
-    <div class="mt-5" />
-    <TimeSeriesChart />
-
-    <BarChart />
-
-    <div class="mt-4" />
-    <PieChart />
-    <DonutChart />
-    <MudPaper Class="pa-4">
-        <MudChart ChartType="ChartType.Pie" InputData="@ValuesRequest" @bind-SelectedIndex="Index"
-                  InputLabels="@labels" Width="300px" Height="300px" />
-    </MudPaper>*@
-   
+@inject IManageLanguageService _manageLanguageService
 
 
 
+
+
+<IframeComponent 
+    Lg="@lg" 
+    StyleCss="width:100%;height:700px !important;border:none;"
+    IsLoading="true" 
+    ServiceId="serv_5c095af3909547e888f2a0636a307ff9"
+    BackupPageUrl="https://modelspeech.onrender.com/dashboard/" />
+
+
+  
 
 @code {
-    private int Index = -1;
-    public double[] ValuesRequest { set; get; } = new double[] { 6, 5, 7 };
-    string[] labels = { "Used", "Fair", "Unused" };
+
+    [Parameter]
+    public string Theme {get; set; }
+
+    private string lg="ar";
+
+    protected override async void OnAfterRender(bool firstRender)
+    {
+
+        if (firstRender)
+        {
+            lg = await _manageLanguageService.GetLanguageAsync();
+            StateHasChanged();
+
+        }
+
+
+    }
 
 }
