--- a/LAHJA/UI/Components/StudioLahjaAi/T2Speech.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/T2Speech.razor
@@ -5,6 +5,7 @@
 @using LAHJA.Data.UI.Components.StudioLahjaAiVM
 @using LAHJA.Data.UI.Models
 @using LAHJA.Data.UI.Templates.Services
+@using LAHJA.Helpers
 @using LAHJA.Them
 @using LAHJA.UI.Components.Base
 @using LAHJA.UI.Components.StudioLahjaAi.Component
@@ -25,12 +26,12 @@
 
 @if (!string.IsNullOrEmpty(_srcFrame))
 {
-    <iframe src="@_srcFrame"
-            width="100%"
-            height="600"
-            style="border: none;height:100%"
-            onload="@OnFrameLoaded">
-    </iframe>
+    <IframeComponent Lg="@CurrentLanguage"
+                     StyleCss="width:100%;height:100%;border:none;"
+                     IsLoading="true"
+                     UrlCancel="@UrlCancel"
+                     UrlRedirect="@(Helper.GetFullPath(Navigation,$"{UrlPage}"))"
+                     SrcIFrame="@_srcFrame" />
 }
 
 @if (isLoading)
