--- a/LAHJA/UI/Components/StudioLahjaAi/T2SpeechLive.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/T2SpeechLive.razor
@@ -5,6 +5,7 @@
 @using LAHJA.Data.UI.Components.StudioLahjaAiVM
 @using LAHJA.Data.UI.Models
 @using LAHJA.Data.UI.Templates.Services
+@using LAHJA.Helpers
 @using LAHJA.Them
 @using MudBlazor
 @using LAHJA.Data.UI.Components.ServiceCard
@@ -17,12 +18,19 @@
 
 @if (!string.IsNullOrEmpty(_srcFrame))
 {
-    <iframe src="@_srcFrame"
+@*     <iframe src="@_srcFrame"
             width="100%"
             height="600"
             style="border: none;height:100%"
             onload="@OnFrameLoaded">
-    </iframe>
+    </iframe> *@
+
+    <IframeComponent Lg="@CurrentLanguage"
+                     StyleCss="width:100%;height:100%;border:none;"
+                     IsLoading="true"
+                     UrlCancel="@UrlCancel"
+                     UrlRedirect="@(Helper.GetFullPath(Navigation,$"{UrlPage}"))"
+                     SrcIFrame="@_srcFrame" />
 }
 
 @if (isLoading)
@@ -47,7 +55,7 @@
     {
         try
         {
-            data.ServiceId = "2";
+                 data.ServiceId = "2";
                 var response = await templateServices.Text2Speech(data);
                 if (response.Succeeded)
                 {
