--- a/LAHJA/UI/Components/StudioLahjaAi/T2Text.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/T2Text.razor
@@ -4,6 +4,7 @@
 @using LAHJA.Data.UI.Models
 @using LAHJA.Data.UI.Models.Studio
 @using LAHJA.Data.UI.Templates.Services
+@using LAHJA.Helpers
 @using LAHJA.Them
 @using LAHJA.UI.Components.Base
 @using LAHJA.UI.Components.StudioLahjaAi.Component
@@ -20,28 +21,18 @@
           height="600" 
           style="border: none;height:100%">
       </iframe> *@
- <style>
 
-
-
-    .custom-focus-border:focus-within {
-        border-color: rgba(11,186,131,1) !important;
-    }
-
-
-</style>
 
 
 @if (!string.IsNullOrEmpty(_srcFrame))
 {
 
-    <iframe src="@_srcFrame"
-            width="100%"
-            height="600"
-            style="border: none;height:100%"
-            onload="@OnFrameLoaded">
-
-    </iframe>
+    <IframeComponent Lg="@CurrentLanguage"
+                     StyleCss="width:100%;height:100%;border:none;"
+                     IsLoading="true"
+                     UrlCancel="@UrlCancel"
+                     UrlRedirect="@(Helper.GetFullPath(Navigation,$"{UrlPage}"))"
+                     SrcIFrame="@_srcFrame" />
 
 
 }
