--- a/LAHJA/_Imports.razor
+++ b/LAHJA/_Imports.razor
@@ -13,14 +13,15 @@
 @using CardShopping.Web.VitsModel
 @using LAHJA.Shared
 @using LAHJA.Pages
-
 @using MudBlazor
-
-
+@using Microsoft.AspNetCore.Mvc.Localization
 @using LAHJA.Data
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
-
 @using LAHJA.UI.Templates
 @using MudBlazor.ThemeManager
 @using Microsoft.AspNetCore.Authorization
 @using global::Shared.Constants.Router
+@using LAHJA.Them
+@using Microsoft.AspNetCore.Components.Authorization
+@* /////////////////////////////////  nject *@
+
