--- a/LAHJA/wwwroot/css/site.css
+++ b/LAHJA/wwwroot/css/site.css
@@ -10,7 +10,7 @@
     overflow-y:auto;
     width:80%;
     left:0;
-    top:70px;
+    top:80px;
 }
 .plan-RenderComponent-nav {
     /*height: 800px;*/
@@ -1018,7 +1018,7 @@ a, .btn-link {
         display: none !important;
     }
     .nav-menu-continer-items-sm  {
-        margin-top: 10px !important;
+/*        margin-top: 10px !important;*/
     }
 
     .nav-menu-continer-items-sm {
